force-app/main/default/objects/SobjectPurgeConfiguration__c/SobjectPurgeConfiguration__c.object-meta.xml
<CustomObject>
    <label>SobjectPurgeConfiguration</label>
    <nameField>
        <label>SobjectPurgeConfiguration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SobjectPurgeConfigurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>