force-app/main/default/objects/SobjectPurgeConfiguration__c/fields/Child_Relationship_Names__c.field-meta.xml
<CustomField>
    <fullName>Child_Relationship_Names__c</fullName>
    <description>We can add child relationship names to fetch child records</description>
    <label>Child Relationship Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>