force-app/main/default/objects/SobjectPurgeConfiguration__c/fields/Limit_Query_Rows__c.field-meta.xml
<CustomField>
    <fullName>Limit_Query_Rows__c</fullName>
    <label>Limit Query Rows</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>