force-app/main/default/objects/SobjectPurgeConfiguration__c/fields/Parent_SobjectPurgeConfiguration__c.field-meta.xml
<CustomField>
    <fullName>Parent_SobjectPurgeConfiguration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent SobjectPurgeConfiguration</label>
    <referenceTo>SobjectPurgeConfiguration__c</referenceTo>
    <relationshipLabel>SobjectPurgeConfigurations</relationshipLabel>
    <relationshipName>SobjectPurgeConfigurations</relationshipName>
    <type>Lookup</type>
</CustomField>