force-app/main/default/objects/SobjectPurgeConfiguration__c/fields/Schedule_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Job_Id__c</fullName>
    <label>Schedule Job Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>