force-app/main/default/objects/SobjectPurgeConfiguration__c/fields/Schedule_Time__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Time__c</fullName>
    <label>Schedule Time (In Expression)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>